Implemented two-player support for gameplay
Implemented two-player support for gameplay.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/Gameplay/GM_StumbleInn.GM_StumbleInn_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Gameplay/GI_StumbleInn.GI_StumbleInn_C
+bOffsetPlayerGamepadIds=True
 
 [/Script/Engine.RecastNavMesh]
 bDrawPolyEdges=False
@@ -104,4 +105,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
