Build default map set to Byewater tavern
Build default map set to Byewater tavern.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=StumbleInn
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
+GameDefaultMap=/Game/TopDownBP/Maps/LVL_Byewater.LVL_Byewater
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
@@ -105,5 +105,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
